  in the node checks, including visually shown in the Admin UI, if running the
  latest 2.2 or 2.3 release.

- The ``bootstrap.seccomp`` setting that controls system call filters has been
  replaced in favour of ``bootstrap.system_call_filter``.

- The ``error_trace`` GET parameter of the HTTP endpoint only allows ``true``
  and ``false`` in lower case. Other values are not allowed any more and will
  result in a parsing exception.

- Store level throttling settings (``indices.store.throttle.*``) have been
  removed.

- The gateway recovery table setting ``recovery.initial_shards`` has been
  removed. Nodes will recover their unassigned local primary shards
  immediatelly after restart.

Changes
=======

- CrateDB is now based on Elasticsearch 6.0.1 and Lucene 7.0.1.

- Added new ``cluster.routing.allocation.disk.watermark.flood_stage`` setting,
  that controls at which disk usage indices should become read-only to prevent
  running out of disk space.

- Added new tokenizers ``simple_pattern`` and ``simple_pattern_split`` which
  allow to tokenize text for the fulltext index by a regular expression pattern.

- Changed ``BEGIN`` and ``SET SESSION`` to no longer require ``DQL``
  permissions on the ``CLUSTER`` level.

- Implemented a `Ready` node status JMX metric expressing if the node is ready
  for processing SQL statements.

Fixes
=====

- Fixed a regression which caused ``IS NOT NULL`` predicates on columns of type
  ``array(object)`` to not match correctly.

- Fixed an issue that caused the ``percentile`` aggregation to fail if an array
  containing a single item was passed as ``fractions``.

- Fixed an issue which resulted in an exception when a routing column was
  compared against a sub-query inside a ``WHERE`` clause.

- Fixed a performance regression resulting in a table scan instead of a NO-MATCH
  if a sub-query used inside a ``WHERE`` clause returns no result
  (https://github.com/crate/crate/issues/6773).